BugID: 93902, Fix edit button wrapped to new line in article (h3 -> h6)

--- a/skins/oasis/css/core/article.scss
+++ b/skins/oasis/css/core/article.scss
@@ -42,6 +42,12 @@
 	.headline-wrapper h2, .headline-wrapper-h2 {
 		overflow: hidden;
 	}
+	.headline-wrapper {
+		h1, h2, h3, h4, h5, h6 {
+			display: inline;
+			vertical-align: baseline;
+		}
+	}
 	.headline-wrapper-h2 {
 		border-bottom: solid 1px $color-headline-border;
 	}
